cmake_minimum_required(VERSION 3.0)
project(homework4)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_EXE main.cpp)
set(SOURCE_LIB1 library1.cpp)
set(SOURCE_LIB2 library2.cpp)
add_library(liblib1 SHARED ${SOURCE_LIB1})
add_library(liblib2 SHARED ${SOURCE_LIB2})
add_executable(homework4 ${SOURCE_EXE})
target_link_libraries(homework4 liblib1 liblib2)